Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-3707

memcached crash intermittently, segfault from within notify_io_complete

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 1.6.5.4
    • 1.6.4
    • couchbase-bucket
    • Security Level: Public
    • None
    • 1.6.5.3
      CentOS 5.2 on AWS EC2

    Description

      Bug reporter has run into this crash intermittently for some time. Previously, no core file was available so some debugger scripting was used to try to identify the crash. It has identified where the problem is coming from:

      Thread 7 (Thread 1105209664 (LWP 12012)):
      #0 0x00002aaaaba72440 in pivot_root () from /lib64/libc.so.6
      #1 <signal handler called>
      #2 0x00000000004129e9 in notify_io_complete (cookie=0x8, status=ENGINE_SUCCESS) at thread.c:517
      #3 0x00002aaaabf6d440 in TapConnMap::notifyIOThreadMain (this=0x641cf0, engine=0x641760, serverApi=0x624f00) at /usr/lib/gcc/x86_64-redhat-linux/4.1.2/../../../../include/c++/4.1.2/bits/stl_function.h:519
      #4 0x00002aaaabf413e7 in EventuallyPersistentEngine::notifyTapIoThread (this=0x641760) at ep_engine.cc:2538
      #5 0x00002aaaabf415f9 in EvpNotifyTapIo (arg=0x8) at ep_engine.cc:783
      #6 0x00002aaaab78b2f7 in start_thread () from /lib64/libpthread.so.0
      #7 0x00002aaaaba71e3d in clone () from /lib64/libc.so.6

      note that pivot_root() is just an unused function as a jumping off point to script where the stack trace should be generated from. The signal handled is likely a SEGV.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ingenthr Matt Ingenthron
            ingenthr Matt Ingenthron
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty