MB-3707 Extend the logging for NULL cookies

Change-Id: Id42495e080f65d6de4e8bfb82e05a9afb7c500a6
Reviewed-on: http://review.membase.org/6071
Reviewed-by: Matt Ingenthron <matt@northscale.com>
Tested-by: Matt Ingenthron <matt@northscale.com>